--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <!----------------------------------------->
     <!----- Main Section ----->
     <!----------------------------------------->
-
     <div class="sections-wrapper">
       <section class="main">
         <div class="container">
@@ -30,6 +29,7 @@
             <div class="top-content">
               <!-- left -->
               <div class="left">
+                <div class="heading"><h4>Kupono pežiūra</h4></div>
                 <div class="voucher-bg">
                   <img class="" src="./images/voucher-blank.png" alt="" />
                 </div>
@@ -184,14 +184,20 @@
                   <!-- Text area -->
                   <div class="text-area">
                     <textarea
+                      placeholder="Tekstas kupone (nebūtina)"
                       class="form-control"
                       name="text"
                       id="text"
                     ></textarea>
 
                     <div class="text">
-                      <span>Gali papildyti dovanų kuponą savo unikaliu sveikinimu. </span>
-                      <span class="blue">Trūksta idėjų? Spausk čia ir peržiūrėk mūsų paruoštukus</span>
+                      <span
+                        >Gali papildyti dovanų kuponą savo unikaliu sveikinimu.
+                      </span>
+                      <a href="#" class="blue"
+                        >Trūksta idėjų? Spausk čia ir peržiūrėk mūsų
+                        paruoštukus</a
+                      >
                     </div>
                   </div>
                 </div>
@@ -199,7 +205,195 @@
             </div>
 
             <!-- Bottom Content -->
-            
+            <div class="bottom-content">
+              <div class="top common">
+                <div class="heading">
+                  <h4>Kuponų kiekis</h4>
+                </div>
+                <!-- Options -->
+                <select>
+                  <option>1</option>
+                  <option>2</option>
+                  <option>3</option>
+                  <option>4</option>
+                  <option>5</option>
+                  <option>6</option>
+                  <option>7</option>
+                  <option>8</option>
+                  <option>9</option>
+                  <option>10</option>
+                  <option>11</option>
+                  <option>12</option>
+                  <option>13</option>
+                  <option>14</option>
+                  <option>15</option>
+                  <option>16</option>
+                  <option>17</option>
+                  <option>18</option>
+                  <option>19</option>
+                  <option>20</option>
+                  <option>21</option>
+                  <option>22</option>
+                  <option>23</option>
+                  <option>24</option>
+                  <option>25</option>
+                  <option>26</option>
+                  <option>27</option>
+                  <option>28</option>
+                  <option>29</option>
+                  <option>30</option>
+                  <option>31</option>
+                  <option>32</option>
+                  <option>33</option>
+                  <option>34</option>
+                  <option>35</option>
+                  <option>36</option>
+                  <option>37</option>
+                  <option>38</option>
+                  <option>39</option>
+                  <option>40</option>
+                  <option>41</option>
+                  <option>42</option>
+                  <option>43</option>
+                  <option>44</option>
+                  <option>45</option>
+                  <option>46</option>
+                  <option>47</option>
+                  <option>48</option>
+                  <option>49</option>
+                  <option>50</option>
+                  <option>51</option>
+                  <option>52</option>
+                  <option>53</option>
+                  <option>54</option>
+                  <option>55</option>
+                  <option>56</option>
+                  <option>57</option>
+                  <option>58</option>
+                  <option>59</option>
+                  <option>60</option>
+                  <option>61</option>
+                  <option>62</option>
+                  <option>63</option>
+                  <option>64</option>
+                  <option>65</option>
+                  <option>66</option>
+                  <option>67</option>
+                  <option>68</option>
+                  <option>69</option>
+                  <option>70</option>
+                  <option>71</option>
+                  <option>72</option>
+                  <option>73</option>
+                  <option>74</option>
+                  <option>75</option>
+                  <option>76</option>
+                  <option>77</option>
+                  <option>78</option>
+                  <option>79</option>
+                  <option>80</option>
+                  <option>81</option>
+                  <option>82</option>
+                  <option>83</option>
+                  <option>84</option>
+                  <option>85</option>
+                  <option>86</option>
+                  <option>87</option>
+                  <option>88</option>
+                  <option>89</option>
+                  <option>90</option>
+                  <option>91</option>
+                  <option>92</option>
+                  <option>93</option>
+                  <option>94</option>
+                  <option>95</option>
+                  <option>96</option>
+                  <option>97</option>
+                  <option>98</option>
+                </select>
+              </div>
+
+              <!-- Inputs -->
+              <div class="common forms">
+                <div class="heading"><h4>Kupono pristatymas</h4></div>
+
+                <div class="inputs">
+                  <div class="inp">
+                    <input type="text" placeholder="* Gavėjo el. paštas" />
+                    <span
+                      >Įrašyk el. pašto adresą, kuriuo išsiųsime nupirktą
+                      kuponą</span
+                    >
+                  </div>
+                  <div class="inp">
+                    <input
+                      type="text"
+                      placeholder="Pristatymo data (nebūtina)"
+                    />
+                    <span
+                      >Gali nurodyti kupono pristatymo datą, jegu nenori siųsti
+                      iš karto</span
+                    >
+                  </div>
+                </div>
+              </div>
+              <!-- Inputs -->
+              <div class="common forms">
+                <div class="heading"><h4>Pirkėjo duomenys</h4></div>
+
+                <div class="inputs">
+                  <div class="inp">
+                    <input type="text" placeholder="* El. paštas" />
+                    <span>Įrašyk pirkėjo el. pašto adresą</span>
+                  </div>
+                  <div class="inp">
+                    <input type="text" placeholder="* Telefonas" />
+                    <span>Įrašyk pirkėjo telefono numerį</span>
+                  </div>
+                  <div class="inp">
+                    <input type="text" placeholder="* Kontaktinis asmuo" />
+                    <span>Įrašyk pirkėjo vardą ir pavardę</span>
+                  </div>
+                </div>
+              </div>
+
+              <!-- Checkbox -->
+              <div class="common">
+                <div class="checkboxs">
+                  <!-- Checkbox -->
+                  <div class="checkbox">
+                    <input id="check1" type="checkbox" />
+                    <label for="check1"
+                      >Susipažinau ir sutinku su
+                      <a href="#">įsigijimo sąlygomis privatumo </a>
+                      <span>ir</span>
+                      <a href="#">politika.</a>
+                    </label>
+                  </div>
+                  <!-- Checkbox -->
+                  <div class="checkbox">
+                    <input id="check2" type="checkbox" />
+                    <label for="check2"
+                      >Sutinku prenumeruoti geriausius Makaliaus
+                      pasiūlymus.</label
+                    >
+                  </div>
+                  <!-- Checkbox -->
+                  <div class="checkbox">
+                    <input id="check3" type="checkbox" />
+                    <label for="check3"
+                      >Pažymėk, jei reikalinga sąskaita išankstiniam apmokėjimui
+                      (įmonėms).</label
+                    >
+                  </div>
+                </div>
+              </div>
+
+              <!-- Submit button -->
+              <div class="btn">
+                <a href="#">Apmokėti</a>
+              </div>
+            </div>
           </div>
         </div>
       </section>
